# efescript

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  call.efe  out.efec  test.efe
.github/workflows/: rust.yml
examples/: call.efe  create_e.efe  efescript  heap.efe  hello.efe  hello_ideal.efe  main.sfe  out.efec  test.efe
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: funs.rs  instruction.rs  lib.rs  macros.rs  main.rs  ops.rs  prelude.rs  syscalls.rs
src/compiler/: mod.rs
src/compiler/ast/: mod.rs
src/compiler/ast/calculations/: mod.rs
src/compiler/ast/lexer/: mod.rs
src/debugger/: mod.rs
src/nasm_efe/: linker.rs  mod.rs  mod_bak.rs  mod_bar.rs  nasm_compiler.rs  nasm_funs.rs
src/raylib_ex/: mod.rs
src/runtime/: data_funs.rs  handle_opcodes.rs  handle_syscall.rs  mod.rs  program.rs
src/runtime/allocator/: global_alloc.rs  mod.rs
src/runtime/program/: init.rs  mod.rs  opcode.rs  runtime.rs  syscall.rs
src/runtime/program/opcode/: opcode_funs.rs
src/runtime/program/thread/: mod.rs  opcode.rs  opcode_funs.rs  runtime.rs  syscall.rs
strtohx/: Cargo.toml
strtohx/src/: main.rs
