[package]
name = "efescript"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["efepages"]


[dependencies]
efepages = { git="https://github.com/efex50/efepages/" }
num-derive = "0.4.2"
num-traits = "0.2.19"
text_io = "0.1.12"




[profile.optimize]
inherits = "release"
opt-level = 3
strip = true
lto = "fat"
